force-app/main/default/objects/Goal__c/Goal__c.object-meta.xml
<CustomObject>
    <description>Used by G100 to compare Opportunities and pipeline to annual growth and performance goals. Primarily used in Reports and Dashboards.</description>
    <label>Goal</label>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>