force-app/main/default/objects/Goal__c/fields/Case_Safe_Goal_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_Goal_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Case Safe Goal ID</label>
    <type>Text</type>
</CustomField>