force-app/main/default/objects/Goal__c/fields/Goal_Type__c.field-meta.xml
<CustomField>
    <fullName>Goal_Type__c</fullName>
    <label>Goal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>KEEP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>