force-app/main/default/objects/Goal__c/fields/Goal_Value__c.field-meta.xml
<CustomField>
    <fullName>Goal_Value__c</fullName>
    <label>Goal Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>