force-app/main/default/objects/Goal__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>G100</fullName>
            </value>
            <value>
                <fullName>G100 Network</fullName>
            </value>
            <value>
                <fullName>NGL</fullName>
            </value>
            <value>
                <fullName>TC</fullName>
            </value>
            <value>
                <fullName>WLA</fullName>
            </value>
            <value>
                <fullName>BX</fullName>
            </value>
            <value>
                <fullName>WLN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>