force-app/main/default/objects/Goal__c/fields/Total_Num_Opps__c.field-meta.xml
<CustomField>
    <fullName>Total_Num_Opps__c</fullName>
    <label>Total Associated Opportunities</label>
    <summaryForeignKey>Opportunity_Goal__c.Goal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>